--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ charset-normalizer==2.0.7
 click==8.0.3
 colorama==0.4.4
 cryptography==3.4.8
+dnspython==2.1.0
 idna==3.3
 iniconfig==1.1.1
 isodate==0.6.0
@@ -34,6 +35,7 @@ pathspec==0.9.0
 platformdirs==2.4.0
 pluggy==1.0.0
 py==1.11.0
+pyarrow==5.0.0
 pycparser==2.21
 pycryptodomex==3.11.0
 PyJWT==2.3.0
