--- a/requirements.txt
+++ b/requirements.txt
@@ -14,24 +14,32 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.7
 click==8.0.3
+cloudpickle==2.0.0
 colorama==0.4.4
 cryptography==3.4.8
 dnspython==2.1.0
+docopt==0.6.2
+fsspec==2021.11.0
 idna==3.3
 iniconfig==1.1.1
 isodate==0.6.0
 isort==5.10.1
 jmespath==0.10.0
 lazy-object-proxy==1.6.0
+locket==0.2.1
 mccabe==0.6.1
 msrest==0.6.21
+mypy==0.910
 mypy-extensions==0.4.3
+nodeenv==1.6.0
 numpy==1.21.4
 oauthlib==3.1.1
 oscrypto==1.2.1
 packaging==21.3
 pandas==1.3.4
+partd==1.2.0
 pathspec==0.9.0
+pipreqs==0.4.11
 platformdirs==2.4.0
 pluggy==1.0.0
 py==1.11.0
@@ -44,9 +52,11 @@ pymongo==3.12.1
 pyodbc==4.0.32
 pyOpenSSL==20.0.1
 pyparsing==3.0.6
+pyright==0.0.13
 pytest==6.2.5
 python-dateutil==2.8.2
 pytz==2021.3
+PyYAML==6.0
 regex==2021.11.10
 requests==2.26.0
 requests-oauthlib==1.3.0
@@ -55,6 +65,8 @@ six==1.16.0
 snowflake-connector-python==2.6.2
 toml==0.10.2
 tomli==1.2.2
+toolz==0.11.2
 typing_extensions==4.0.0
 urllib3==1.26.7
 wrapt==1.13.3
+yarg==0.1.9
